# Dynamic-Panel-Animation

./: .gitignore  README.md  THIRD_PARTY.md  export_manifest.json  pyproject.toml
Final_Project_Report/: main.tex  sample.bib
Final_Project_Report/scripts/: make_loss_curves.py  make_pptx_figures.py  verify_citations.py
docs/: method.md
scripts/: train_native_animation.sh
scripts/slurm/: base_inference_demo.sbatch  build_metadata.sbatch  env_smoke_test.sbatch  train_native_animation.sbatch
src/native_animation/: __init__.py
src/native_animation/data/: __init__.py  build_metadata.py  extract_keyframes.py  sampling.py
src/native_animation/evaluation/: __init__.py  evaluate.py
src/native_animation/inference/: __init__.py  generate.py  run_baseline.py
src/native_animation/modeling/: __init__.py  native_flowmatch.py
src/native_animation/training/: train.py
